// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`handleNodeChangeIntent* should race getCurrentBlock and delay 1`] = `
Object {
  "@@redux-saga/IO": true,
  "RACE": Object {
    "lb": Object {
      "@@redux-saga/IO": true,
      "CALL": Object {
        "args": Array [],
        "context": null,
        "fn": [Function],
      },
    },
    "to": Object {
      "@@redux-saga/IO": true,
      "CALL": Object {
        "args": Array [
          5000,
        ],
        "context": null,
        "fn": [Function],
      },
    },
  },
}
`;

exports[`handleNodeChangeIntent* should select getCustomNodeConfig and match race snapshot 1`] = `
Object {
  "@@redux-saga/IO": true,
  "RACE": Object {
    "lb": Object {
      "@@redux-saga/IO": true,
      "CALL": Object {
        "args": Array [],
        "context": null,
        "fn": [Function],
      },
    },
    "to": Object {
      "@@redux-saga/IO": true,
      "CALL": Object {
        "args": Array [
          5000,
        ],
        "context": null,
        "fn": [Function],
      },
    },
  },
}
`;

exports[`pollOfflineStatus* should put showNotification and put toggleOfflineConfig if !pingSucceeded && !isOffline 1`] = `
Object {
  "@@redux-saga/IO": true,
  "PUT": Object {
    "action": Object {
      "payload": Object {
        "duration": Infinity,
        "id": 0.001,
        "level": "danger",
        "msg": "You’ve lost your connection to the network, check your internet
            connection or try changing networks from the dropdown at the
            top right of the page.",
      },
      "type": "SHOW_NOTIFICATION",
    },
    "channel": null,
  },
}
`;

exports[`pollOfflineStatus* should race pingSucceeded and timeout 1`] = `
Object {
  "@@redux-saga/IO": true,
  "RACE": Object {
    "pingSucceeded": Object {
      "@@redux-saga/IO": true,
      "CALL": Object {
        "args": Array [],
        "context": null,
        "fn": [Function],
      },
    },
    "timeout": Object {
      "@@redux-saga/IO": true,
      "CALL": Object {
        "args": Array [
          5000,
        ],
        "context": null,
        "fn": [Function],
      },
    },
  },
}
`;
